# Open-Transactions

./: .gitignore  .travis.yml  Doxyfile  Makefile.am  README.md  VERSION  autogen.sh  configure.ac
bootstrap/: install-deps-linux.sh  install-deps-osx.sh
debian/: changelog  control  copyright  rules
docs/: INSTALL-Android.txt  INSTALL-Debian_Ubuntu.txt  INSTALL-Fedora.txt  INSTALL-MEMO-Linux.txt  INSTALL-OSX-Homebrew.txt  INSTALL-Windows.txt  INSTALL-openSUSE.txt
include/bigint/: BigInteger.hh  BigIntegerAlgorithms.hh  BigIntegerLibrary.hh  BigIntegerUtils.hh  BigUnsigned.hh  BigUnsignedInABase.hh  NumberlikeArray.hh
include/containers/: digraph.tpp  simple_ptr.tpp  smart_ptr.tpp
include/irrxml/: CXMLReaderImpl.hpp  irrArray.hpp  irrString.hpp  irrTypes.hpp  irrXML.hpp
include/lucre/: bank.hpp
include/otapi/: Mock_OTAPI_Exec.h  Mock_OTAPI_Exec.hpp  OTAPI.h  OTAPI.hpp  OTAPI_Basic.h  OTAPI_Basic.hpp  OTAPI_Exec.hpp  OTClient.hpp  OTMadeEasy.hpp  OTMeChai.hpp  OTMeCpp.hpp  OTRecord.hpp  OTRecordList.hpp  OTServerConnection.hpp  OT_ME.h  OT_ME.hpp  OpenTransactions.hpp  main.hpp  ot_command_ot.hpp  ot_commands_ot.hpp  ot_made_easy_ot.hpp  ot_me_switch.hpp  ot_otapi_ot.hpp  ot_utility_ot.hpp
include/otapitest/: OtMeExtra.hpp  OtMeTest.hpp  stdafx.hpp
include/otextensions/: OTSocket.hpp
include/otlib/: ExportWrapper.h  MemoryWrapper.hpp  OTASCIIArmor.hpp  OTAccount.hpp  OTAcctFunctor.hpp  OTAcctList.hpp  OTAgent.hpp  OTAgreement.hpp  OTAmount.hpp  OTAssert.hpp  OTAssetContract.hpp  OTAsymmetricKey.hpp  OTAsymmetricKeyOpenSSL.hpp  OTAsymmetricKey_OpenSSLPrivdp.hpp  OTBasket.hpp  OTBasketItem.hpp  OTBylaw.hpp  OTCachedKey.h  OTCachedKey.hpp  OTCallback.hpp  OTCaller.hpp  OTCheque.hpp  OTClause.hpp  OTCleanup.hpp  OTCommon.hpp  OTContract.hpp  OTCredential.h  OTCredential.hpp  OTCron.hpp  OTCronItem.hpp  OTCrypto.hpp  OTData.hpp  OTDataCheck.hpp  OTDataFolder.hpp  OTDigitalCash.hpp  OTEnvelope.hpp  OTFolders.hpp  OTIdentifier.hpp  OTInstrument.hpp  OTItem.hpp  (+75 more)
include/ots/: OTClientConnection.hpp  OTServer.hpp  OTServerSocket.hpp  main.hpp
include/zmq/: zmq.hpp
osx/: chaiscript.rb  open-transactions.rb
project/: open-transactions.sln  setup-moneychanger.nsi  setup.nsi  setup_x64.nsi
scripts/: opentxs  travis_update_online_documentation.sh
src/: Makefile.am  opentxs.pc.in
src/gmock/: Makefile.am  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  stdafx.h
src/gtest/: Makefile.am  gtest-death-test.cc  gtest-filepath.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  stdafx.h
src/opentxs/: main.cpp
src/otapi/: Makefile.am  OTAPI.cpp  OTAPI_Basic.cpp  OTAPI_Exec.cpp  OTClient.cpp  OTMadeEasy.cpp  OTMeChai.cpp  OTMeCpp.cpp  OTRecord.cpp  OTRecordList.cpp  OTServerConnection.cpp  OT_ME.cpp  OT_ME_NEW.cpp  OpenTransactions.cpp  OtMeChai.cpp  ot_commands_ot.cpp  ot_made_easy_ot.cpp  ot_opentxs_ot.cpp  ot_otapi_ot.cpp  ot_utility_ot.cpp  testclient.cpp  testread.cpp  testwrite.cpp
src/otapitest/: AllRequests.cpp  AllTests.cpp  AllTransactions.cpp  CallStructure.txt  Makefile.am  OtMeExtra.cpp  OtMeExtra.hpp  OtMeTest.cpp  OtMeTest.hpp  Test_OT_ME.cpp  Test_accept_from_paymentbox.cpp  Test_accept_inbox_items.cpp  Test_cancel_outgoing_payments.cpp  Test_create_pseudonym.cpp  Test_deposit_cash.cpp  Test_deposit_local_purse.cpp  Test_details_deposit_cheque.cpp  Test_details_export_cash.cpp  Test_details_refresh_nym.cpp  Test_discard_incoming_payments.cpp  Test_export_cash.cpp  Test_get_payment_instrument.cpp  Test_handle_payment_index.cpp  Test_insure_enough_nums.cpp  Test_load_or_retrieve_contract.cpp  Test_load_or_retrieve_encrypt_key.cpp  Test_load_or_retrieve_mint.cpp  Test_load_or_retrieve_signing_key.cpp  Test_load_public_encryption_key.cpp  Test_load_public_signing_key.cpp  Test_make_sure_enough_trans_nums.cpp  Test_ot_utility.cpp  Test_ot_utility_ReceiveReplyLowLevel.cpp  Test_ot_utility_getAndProcessNymbox_4.cpp  Test_ot_utility_getBoxReceiptLowLevel.cpp  Test_ot_utility_getBoxReceiptWithErrorCorrection.cpp  Test_ot_utility_getNymbox.cpp  Test_ot_utility_getNymboxLowLevel.cpp  Test_ot_utility_getRequestNumber.cpp  Test_ot_utility_getTransactionNumLowLevel.cpp  (+11 more)
src/otc/: main.cpp
src/otd/: main.cpp
src/otextensions/: Makefile.am  OTSocket.cpp
src/otlib/: Makefile.am  OTASCIIArmor.cpp  OTAccount.cpp  OTAcctFunctor.cpp  OTAcctList.cpp  OTAgent.cpp  OTAgreement.cpp  OTAmount.cpp  OTAssert.cpp  OTAssetContract.cpp  OTAsymmetricKey.cpp  OTAsymmetricKeyOpenSSL.cpp  OTAsymmetricKeyOpenSSLPrivdp.cpp  OTBasket.cpp  OTBasketItem.cpp  OTBylaw.cpp  OTCachedKey.cpp  OTCallback.cpp  OTCaller.cpp  OTCheque.cpp  OTClause.cpp  OTContract.cpp  OTCredential.cpp  OTCron.cpp  OTCronItem.cpp  OTCrypto.cpp  OTData.cpp  OTDataCheck.cpp  OTDataFolder.cpp  OTDigitalCash.cpp  OTEnvelope.cpp  OTFolders.cpp  OTIdentifier.cpp  OTInstrument.cpp  OTItem.cpp  OTKeyCredential.cpp  OTKeypair.cpp  OTKeyring.cpp  OTLedger.cpp  OTLog.cpp  (+46 more)
src/otlib/bigint/: BigInteger.cc  BigIntegerAlgorithms.cc  BigIntegerUtils.cc  BigUnsigned.cc  BigUnsignedInABase.cc  Makefile.am  sample.cc  testsuite.cc
src/otlib/irrxml/: Makefile.am  irrXML.cpp
src/otlib/lucre/: Makefile.am  bankimp.cpp
src/otlib/otext/: Makefile.am  Timer.cpp  anyoption.cpp  mkcert.cpp  tinythread.cpp
src/otlib/otprotob/: Makefile.am
src/otlib/simpleini/: ConvertUTF.cpp
src/otlib/zmq/: Makefile.am  err.hpp  msg.cpp  options.cpp  options.hpp  precompiled.hpp  proxy.cpp  stream_engine.hpp  tcp_connecter.hpp  tcp_listener.hpp  zmq.cpp  zmq_utils.cpp
src/otmint/: main.cpp
src/ots/: OTClientConnection.cpp  OTServer.cpp  OTServerSocket.cpp  main.cpp  testserver.cpp  xmlrpcxx_server.cpp
src/otx/: main.cpp  opentxs.rc
src/zmq/: COPYING.STATIC  Makefile.am  err.hpp  msg.cpp  options.cpp  options.hpp  platform.hpp  precompiled.hpp  proxy.cpp  stream_engine.hpp  tcp_connecter.hpp  tcp_listener.hpp  zmq.cpp  zmq_utils.cpp
swig/: buildwrappers.bat  buildwrappers.sh
tests/: Makefile.am
tests/otlib/: Makefile.am  Test_OTData.cpp
(+274 files in other folders)
